--- a/_03_Views & Thymeleaf/exercise/ManagerProduct/src/main/webapp/WEB-INF/views/product/create.html
+++ b/_03_Views & Thymeleaf/exercise/ManagerProduct/src/main/webapp/WEB-INF/views/product/create.html
@@ -15,7 +15,7 @@
         <aside class="aside">
             <h2>Dashboards</h2>
             <ul>
-                <li><a href="/ProductServlet">Default</a></li>
+                <li><a href="/Products">Default</a></li>
                 <li><a href="">Other</a></li>
             </ul>
             <h2>Manager</h2>
@@ -38,7 +38,7 @@
                 </form>
             </div>
             <div class="back">
-                <a href="/">&larr; Trở về danh sách</a>
+                <a href="/Products">&larr; Trở về danh sách</a>
             </div>
         </section>
     </main>
