--- a/_03_Views & Thymeleaf/exercise/ManagerProduct/src/main/webapp/WEB-INF/views/product/create.html
+++ b/_03_Views & Thymeleaf/exercise/ManagerProduct/src/main/webapp/WEB-INF/views/product/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,11 +29,11 @@
         <section class="section">
             <div class="main-form">
                 <h2>Tạo dữ liệu mới</h2>
-                <form action="" class="form" method="post">
-                    <input type="number" class="input-q1" placeholder="Nhập" name="id">
-                    <input type="text" class="input-q1" placeholder="Nhập" name="name">
-                    <input type="text" class="input-q1" placeholder="Nhập" name="price">
-                    <input type="text" class="input-q1" placeholder="Nhập" name="about">
+                <form action="" class="form" method="post" th:object="${productNew}">
+                    <input type="number" class="input-q1" placeholder="Nhập" name="id" th:field="*{id}">
+                    <input type="text" class="input-q1" placeholder="Nhập" name="name" th:field="*{name}">
+                    <input type="text" class="input-q1" placeholder="Nhập" name="price" th:field="*{price}">
+                    <input type="text" class="input-q1" placeholder="Nhập" name="about" th:field="*{about}">
                     <button type="submit" class="submit">Tạo dữ liệu</button>
                 </form>
             </div>
