--- a/_03_Views & Thymeleaf/exercise/ManagerProduct/src/main/webapp/WEB-INF/views/product/create.html
+++ b/_03_Views & Thymeleaf/exercise/ManagerProduct/src/main/webapp/WEB-INF/views/product/create.html
@@ -30,7 +30,7 @@
             <div class="main-form">
                 <h2>Tạo dữ liệu mới</h2>
                 <form action="" class="form" method="post" th:object="${productNew}">
-                    <input type="number" class="input-q1" placeholder="Nhập" name="id" th:field="*{id}">
+<!--                    <input type="hidden" class="input-q1" placeholder="Nhập" name="id" th:field="*{id}">-->
                     <input type="text" class="input-q1" placeholder="Nhập" name="name" th:field="*{name}">
                     <input type="text" class="input-q1" placeholder="Nhập" name="price" th:field="*{price}">
                     <input type="text" class="input-q1" placeholder="Nhập" name="about" th:field="*{about}">
