--- a/_06_JPA/exercise/AppBlog/src/main/webapp/WEB-INF/views/home.html
+++ b/_06_JPA/exercise/AppBlog/src/main/webapp/WEB-INF/views/home.html
@@ -76,7 +76,7 @@
             <div id="pagination" class="pagination"></div>
             <div class="modal-alert" id="modal-alert">
                 <div class="modal-content-alert">
-                    <h2>Đã cập nhật lại danh sách</h2>
+                    <h2>Đã cập nhật lại dữ liệu</h2>
                     <p class="tick">&#10003;</p>
                 </div>
             </div>
