--- a/_07_ Spring Data Repository/exercise/AppBlogSB/src/main/resources/templates/home.html
+++ b/_07_ Spring Data Repository/exercise/AppBlogSB/src/main/resources/templates/home.html
@@ -58,6 +58,8 @@
       <div class="main-table" id="main-table">
         <h3>Loại bài viết</h3>
         <p th:text="${blog.typePost.nameType}"></p>
+        <h3>Ngày tạo bài viết</h3>
+        <p th:text="${blog.date}"></p>
         <h3>Tác giả</h3>
         <p th:text="${blog.author}"></p>
         <h3>Tiêu đề</h3>
