--- a/_10_Session_cookie/exercise/Cart/src/main/resources/templates/cart.html
+++ b/_10_Session_cookie/exercise/Cart/src/main/resources/templates/cart.html
@@ -44,6 +44,8 @@
                     <p th:text="${product.id}">Id</p>
                     <h3>Giá: </h3>
                     <p th:text="${product.price}">Price</p>
+                    <h3>Số lượng: </h3>
+                    <p th:text="${product.quantity}"></p>
           </div>
           </div>
         </div>
