--- a/_07_ Spring Data Repository/exercise/AppBlogSB/src/main/resources/templates/update.html
+++ b/_07_ Spring Data Repository/exercise/AppBlogSB/src/main/resources/templates/update.html
@@ -15,7 +15,9 @@
         <aside class="aside">
             <h2>Dashboards</h2>
             <ul>
-                <li><a href="/blog">Default</a></li>
+                <li><a href="/blogs/">Default</a></li>
+                <li><a href="/blogs/category">Danh sách Category</a></li>
+                <li><a href="/blogs/list">Danh sách bài viết</a></li>
                 <li><a href="">Other</a></li>
             </ul>
         </aside>
@@ -38,7 +40,7 @@
                 </form>
             </div>
             <div class="back">
-                <a href="/blogs">&larr; Trở về danh sách</a>
+                <a href="/blogs/list">&larr; Trở về danh sách</a>
             </div>
         </section>
     </main>
